<resources>
    <string name="app_name">Cocina a tu sazón</string>
    <string name="button_arroz">Arroz</string>
    <string name="button_pasta">Pasta</string>
    <string name="button_al_horno">Al Horno</string>
    <string name="button_comida_rapida">Comida Rápida</string>
    <string name="button_cocteles">Cocteles</string>
    <string name="button_jugos">Jugos</string>
    <string name="button_panaderia_dulce">Panadería Dulce</string>
    <string name="button_panaderia_salada">Panadería Salada</string>
    <string name="button_tortas_y_pasteles">Tortas y Pasteles</string>
    <string name="button_postres_frios">Postres Fríos</string>
    <string name="button_pasabocas">Pasabocas</string>
    <string name="button_ensaladas">Ensaladas</string>
    <string name="button_batidos">Batidos</string>
    <string name="hint_nombre_receta">Mi plato se llama</string>
    <string name="hint_utensilios">Utensilios necesarios</string>
    <string name="hint_tiempo_aproximado">Se demora aproximadamente</string>
    <string name="hint_ingredientes">Ingredientes</string>
    <string name="hint_preparacion">Preparación</string>
    <string name="hint_foto_final">Foto final</string>
    <string name="hint_consejos">Consejos</string>
    <string name="hint_tiempo_coccion">Tiempo de cocción</string>
    <string name="hint_tiempo_preparacion">Tiempo aproximado de preparación</string>
    <string name="hint_consejo">Consejos adicionales</string>
    <string name="titulo_crear_receta_cocteles">Crea tu receta de Cócteles</string>
    <string name="titulo_crear_receta_jugos">Crear receta de Jugos</string>
    <string name="titulo_crear_receta_panaderia_dulce">Crea tu receta de Panadería Dulce</string>
    <string name="titulo_crear_receta_panaderia_salada">Crea tu receta de Panadería Salada</string>
    <string name="titulo_crear_receta_tortas_pasteles">Crea tu receta de Tortas y Pasteles</string>
    <string name="titulo_crear_receta_postres_frios">Crea tu receta de Postres Fríos</string>
    <string name="titulo_crear_receta_pasabocas">Crea tu receta de Pasabocas</string>
    <string name="titulo_crear_receta_ensaladas">Crea tu receta de Ensaladas</string>
    <string name="titulo_crear_receta_batidos">Crear Receta de Batidos</string>
    <string name="titulo_crear_receta_carnes">Crear Receta de Carnes</string>
    <string name="titulo_crear_receta_sopas">Crea tu receta de Sopas</string>
    <string name="titulo_buscar_tipo_bebidas">Buscar Bebidas</string>
    <string name="titulo_buscar_tipo_reposteria">Buscar Repostería</string>
    <string name="titulo_buscar_receta_arroz">Recetas de Arroz</string>
    <string name="titulo_buscar_receta_pasta">Recetas de Pasta</string>
    <string name="tiempo_aproximado_receta">Tiempo aproximado</string>
    <string name="titulo_buscar_recetas_al_horno">Al Horno</string>
    <string name="titulo_buscar_recetas_comida_rapida">Comida Rápida</string>
    <string name="titulo_buscar_recetas_cocteles">Cocteles</string>
    <string name="titulo_buscar_receta_jugos">Jugos</string>
    <string name="titulo_buscar_receta_panaderia_dulce">Panadería Dulce</string>
    <string name="titulo_buscar_recetas_panaderia_salada">Panaderias Salada</string>
    <string name="titulo_buscar_recetas_tortas_pasteles">Recetas de Tortas y Pasteles</string>
    <string name="titulo_buscar_recetas_postres_frios">Recetas de Postres Fríos</string>
    <string name="titulo_buscar_receta_pasabocas">Recetas de Pasabocas</string>
    <string name="titulo_buscar_recetas_ensaladas">Recetas de Ensaladas</string>
    <string name="titulo_buscar_receta_batidos">Recetas de Batidos</string>
    <string name="titulo_buscar_receta_carnes">Recetas de Carnes</string>
    <string name="titulo_buscar_receta_sopas">Recetas de Sopas</string>
    <string name="titulo_buscar_receta_cocteles">Receta Cocteles</string>
    <string name="titulo_detalle_receta">Detalles de la Receta</string>
    <string name="buscar_plato_fuerte">Buscar Plato Fuerte</string>
    <string name="buscar_bebidas">Buscar Bebidas</string>
    <string name="buscar_reposteria">Buscar Repostería</string>
    <string name="buscar_sopas">Buscar Sopas</string>
    <string name="buscar_fitness">Buscar Fitness</string>
    <string name="buscar_carnes">Buscar Carnes</string>
    <string name="buscar_arroz">Buscar Recetas de Arroz</string>
    <string name="buscar_pasta">Buscar Recetas de Pasta</string>
    <string name="buscar_al_horno">Buscar Recetas Al Horno</string>
    <string name="buscar_comida_rapida">Buscar Recetas de Comida Rápida</string>
    <string name="buscar_cocteles">Buscar Cocteles</string>
    <string name="buscar_jugos">Buscar Jugos</string>
    <string name="buscar_panaderia_dulce">Buscar Panadería Dulce</string>
    <string name="buscar_panaderia_salada">Buscar Panadería Salada</string>
    <string name="buscar_tortas_pasteles">Buscar Tortas y Pasteles</string>
    <string name="buscar_postres_frios">Buscar Postres Fríos</string>
    <string name="buscar_pasabocas">Buscar Pasabocas</string>
    <string name="buscar_ensaladas">Buscar Ensaladas</string>
    <string name="buscar_batidos">Buscar Batidos</string>
    <string name="nombre_receta">Nombre de la receta</string>
    <string name="nombre_de_la_receta">Mi plato se llama</string>
    <string name="toast_completar_campos">Por favor completa todos los campos requeridos</string>
    <string name="toast_receta_guardada">Receta al horno guardada exitosamente</string>
    <string name="categoria_receta">Categoría</string>
    <string name="categoria">Categoría</string>
    <string name="subcategoria">Subcategoría</string>
    <string name="descripcion_foto_final">Imagen de la receta final de postres fríos</string>
    <string name="tipo_fitness_buscar">Buscar Recetas de Fitness</string>
    <string name="tiempo_aproximado">Se demora aproximadamente</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="buscar_receta">Buscar Receta</string>
    <string name="plato_fuerte">Plato Fuerte</string>
    <string name="bebidas">Bebidas</string>
    <string name="reposteria">Repostería</string>
    <string name="sopas">Sopas</string>
    <string name="fitness">Fitness</string>
    <string name="carnes">Carnes</string>
    <string name="utensilios">Utensilios</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="Preparacion">Preparación</string>
    <string name="guardar_receta">Guardar Receta</string>
    <string name="icon_description">Descripcion del icono</string>
</resources>