<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonArroz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_arroz"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonPasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pasta"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonAlHorno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_al_horno"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonComidaRapida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_comida_rapida"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
