<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_receta"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewSubcategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subcategoria"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTiempoAproximado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_aproximado"
        android:textSize="16sp" />

</LinearLayout>
